--- a/fractal-ai-research.html
+++ b/fractal-ai-research.html
@@ -1,78 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fractal AI Research | Itoshiro Zuna</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: 'Arial', sans-serif;
-            color: #fff;
-            background: #0a0a23;
-            text-align: center;
-            padding: 20px;
-        }
-        nav {
-            position: fixed;
-            top: 0;
-            width: 100%;
-            background: rgba(0, 0, 0, 0.8);
-            padding: 10px 0;
-            z-index: 3;
-        }
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            margin: 0 20px;
-            font-size: 1.2rem;
-            text-shadow: 0 0 5px #000;
-        }
-        nav a:hover {
-            color: #FFD700;
-        }
-        h1 {
-            color: #FFD700;
-            text-shadow: 0 0 10px #000;
-            margin-top: 60px;
-        }
-        p {
-            color: #C0C0C0;
-            max-width: 800px;
-            margin: 0 auto;
-        }
-        a {
-            color: #FFD700;
-            text-decoration: none;
-        }
-        a:hover {
-            color: #e6c200;
-        }
-    </style>
-</head>
-<body>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="index.html#about">About</a>
-        <a href="index.html#book">Books</a>
-        <a href="fractal-ai-research.html">Fractal AI Research</a>
-        <a href="fractal-meditation.html">Fractal Meditation</a>
-        <a href="virtual-fractal-sanctuary.html">Virtual Fractal Sanctuary</a>
-        <a href="blog.html">Blog</a>
-        <a href="index.html#contact">Contact</a>
-        <a href="https://x.com/senseizuna" target="_blank">X</a>
-        <a href="https://instagram.com/itoshirozuna" target="_blank">Instagram</a>
-    </nav>
-    <h1>Fractal AI Research</h1>
-   <!DOCTYPE html>
-<html lang="en">
-<head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fractalverse 3D AI Research Adaptation Enhanced</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/three@0.134.0/examples/js/controls/OrbitControls.js"></script>
   <style>
-    body { margin: 0; overflow: hidden; background: #000; }
+    html, body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100vh;
+      overflow: hidden;
+      background: #000;
+    }
+    canvas {
+      display: block;
+      width: 100%;
+      height: 100%;
+    }
     #controls {
       position: absolute;
       top: 10px;
@@ -89,6 +36,7 @@
       background: rgba(0, 0, 0, 0.5);
       padding: 8px;
       border-radius: 8px;
+      z-index: 1;
     }
     button { margin: 3px 0; padding: 3px 6px; width: 100%; font-size: 12px; }
     p { margin: 3px 0; text-align: center; }
