--- a/fractal-meditation.html
+++ b/fractal-meditation.html
@@ -1,96 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fractal Meditation | Itoshiro Zuna</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: 'Arial', sans-serif;
-            color: #fff;
-            background: #0a0a23;
-            text-align: center;
-            padding: 20px;
-        }
-        nav {
-            position: fixed;
-            top: 0;
-            width: 100%;
-            background: rgba(0, 0, 0, 0.8);
-            padding: 10px 0;
-            z-index: 3;
-        }
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            margin: 0 20px;
-            font-size: 1.2rem;
-            text-shadow: 0 0 5px #000;
-        }
-        nav a:hover {
-            color: #FFD700;
-        }
-        h1 {
-            color: #FFD700;
-            text-shadow: 0 0 10px #000;
-            margin-top: 60px;
-        }
-        p {
-            color: #C0C0C0;
-            max-width: 800px;
-            margin: 0 auto;
-        }
-        a {
-            color: #FFD700;
-            text-decoration: none;
-        }
-        a:hover {
-            color: #e6c200;
-        }
-    </style>
-</head>
-<body>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="index.html#about">About</a>
-        <a href="index.html#book">Books</a>
-        <a href="fractal-ai-research.html">Fractal AI Research</a>
-        <a href="fractal-meditation.html">Fractal Meditation</a>
-        <a href="virtual-fractal-sanctuary.html">Virtual Fractal Sanctuary</a>
-        <a href="blog.html">Blog</a>
-        <a href="index.html#contact">Contact</a>
-        <a href="https://x.com/senseizuna" target="_blank">X</a>
-        <a href="https://instagram.com/itoshirozuna" target="_blank">Instagram</a>
-    </nav>
-    <h1>Fractal Meditation</h1>
-    <p>This is a placeholder for the Fractal Meditation project. Add your project content here.</p>
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="en">
-<head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fractalverse 3D VR Therapeutic Adaptation Enhanced</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/three@0.134.0/examples/js/controls/OrbitControls.js"></script>
   <style>
-    body { margin: 0; overflow: hidden; background: #000; }
-    #vrButton { position: absolute; bottom: 20px; right: 20px; padding: 10px; background: #fff; border: none; cursor: pointer; }
-    #controls {
-      position: absolute; bottom: 10px; left: 50%;
-      transform: translateX(-50%);
-      width: 80%; max-width: 800px;
+    html, body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100vh;
+      overflow: hidden;
+      background: #000;
+    }
+    canvas {
+      display: block;
+      width: 100%;
+      height: 100%;
+    }
+    nav {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      background: rgba(0, 0, 0, 0.8);
+      padding: 10px 0;
+      z-index: 3;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      font-size: 1.2rem;
+      text-shadow: 0 0 5px #000;
+    }
+    nav a:hover {
+      color: #FFD700;
+    }
+    .nav-left {
+      margin-left: 20px;
+    }
+    .nav-center {
+      flex-grow: 1;
       text-align: center;
-      color: #fff; font-family: Arial;
+    }
+    .nav-center h1 {
+      margin: 0;
+      font-size: 1.5rem;
+      color: #FFD700;
+      text-shadow: 0 0 5px #000;
+    }
+    #vrButton { 
+      position: absolute; 
+      bottom: 20px; 
+      right: 20px; 
+      padding: 10px; 
+      background: #fff; 
+      border: none; 
+      cursor: pointer; 
+      z-index: 2;
+    }
+    #controls {
+      position: absolute; 
+      bottom: 10px; 
+      left: 50%;
+      transform: translateX(-50%);
+      width: 80%; 
+      max-width: 800px;
+      text-align: center;
+      color: #fff; 
+      font-family: Arial;
       background: rgba(0, 0, 0, 0.5);
       padding: 10px;
       border-radius: 10px;
+      z-index: 2;
     }
-    button { margin: 5px; padding: 5px 10px; }
-    p { margin: 5px 0; }
+    button { 
+      margin: 5px; 
+      padding: 5px 10px; 
+      color: #FFD700;
+      background: rgba(255, 215, 0, 0.1);
+      border: 1px solid #FFD700;
+    }
+    button:hover {
+      background: rgba(255, 215, 0, 0.3);
+    }
+    p { 
+      margin: 5px 0; 
+    }
     #tooltip {
-      position: absolute; top: 50px; left: 50%;
+      position: absolute; 
+      top: 60px; /* Adjusted to account for header */
+      left: 50%;
       transform: translateX(-50%);
       background: rgba(0, 0, 0, 0.8);
       color: #fff;
@@ -100,10 +104,45 @@
       font-size: 14px;
       pointer-events: none;
       display: none;
+      z-index: 2;
+    }
+    @media (max-width: 768px) {
+      nav a {
+        font-size: 1rem;
+      }
+      .nav-center h1 {
+        font-size: 1.2rem;
+      }
+      #controls {
+        width: 90%;
+        font-size: 12px;
+        padding: 5px;
+      }
+      button {
+        font-size: 12px;
+        padding: 3px 6px;
+      }
+      #tooltip {
+        font-size: 12px;
+        top: 50px;
+      }
+      #vrButton {
+        font-size: 12px;
+        padding: 5px;
+      }
     }
   </style>
 </head>
 <body>
+  <nav>
+    <div class="nav-left">
+      <a href="index.html">Home</a>
+    </div>
+    <div class="nav-center">
+      <h1>Fractal Meditation</h1>
+    </div>
+    <div class="nav-right"></div> <!-- Empty for spacing, can be used for future links -->
+  </nav>
   <button id="vrButton">Enter VR</button>
   <div id="controls">
     <p>Mode: <span id="mode">Exploration</span></p>
