--- a/fractal-ai-research.html
+++ b/fractal-ai-research.html
@@ -636,7 +636,7 @@
         };
       }
 
-      async getReward() {
+      getReward() {
         let reward = 0;
         this.stepsSinceLastPoint++;
 
