--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@
                 <a href="fractal-ai-research.html">Fractal AI Research</a>
                 <a href="fractal-meditation.html">Fractal Meditation</a>
                 <a href="virtual-fractal-sanctuary.html">Virtual Fractal Sanctuary</a>
+                <a href="app-instructions.html">Instructions</a>
             </div>
         </div>
         <a href="#contact">Contact</a>
@@ -249,24 +250,24 @@
             <h1>Itoshiro Zuna</h1>
             <p class="pen-name">One who weaves the thread of eras, carrying the name that arrives through hidden harbors</p>
             <p class="book-title">The Fractal Symphony of Time</p>
-            <img src="images/book-cover.jpg" alt="The Fractal Symphony of Time Book Cover by Itoshiro Zuna" class="book-cover">
             <a href="https://amzn.to/44CdNom" class="cta-button">Buy Now on Kindle</a>
         </div>
     </section>
     <section id="about">
         <div class="content-box">
             <h2>About Itoshiro Zuna</h2>
-            <p>Itoshiro Zuna, meaning ‘one who weaves the thread of eras,’ is the pen name of a visionary author. Inspired by a childhood memory under a metal arch and a meditation vision with my boxer Akaya, I crafted *The Fractal Symphony of Time* to explore time as a living, fractal force. Dedicated to my wife, children, parents, and Akaya’s memory, this book is my invitation to see yourself as a creator in the cosmic melody.</p>
+            <p>Itoshiro Zuna, meaning ‘one who weaves the thread of eras,’ is a visionary author. Inspired by a childhood memory under a metal arch and a meditation vision with my boxer Akaya, I crafted *The Fractal Symphony of Time* to explore time as a living, fractal force. Dedicated to my wife, children, parents, and Akaya’s memory, this book is my invitation to see yourself as a creator in the cosmic melody.</p>
         </div>
     </section>
     <section class="book-preview" id="book">
         <div class="content-box">
             <h2>Explore My Books</h2>
-            <p>A metaphysical journey through dimensions and consciousness.</p>
             <div style="text-align: center; padding: 20px;">
+                <p style="font-size: 1.2rem; margin: 10px 0;">A metaphysical journey through dimensions and consciousness.</p>
                 <p style="font-size: 1.2rem; margin: 10px 0;">The Fractal Symphony of Time</p>
                 <a href="https://amzn.to/44CdNom" class="cta-button">Get Your Copy Now</a>
-                <p style="font-size: 1.2rem; margin: 20px 0;">When Realms Bleed: The World As I See It</p>
+                <p style="font-size: 1.2rem; margin: 20px 0 10px 0;">A Sci-Fi novel that takes you on an adventure into the 9 realms.</p>
+                <p style="font-size: 1.2rem; margin: 10px 0;">When Realms Bleed: The World As I See It</p>
                 <a href="https://amzn.to/443m18U" class="cta-button">Get Your Copy Now</a>
             </div>
         </div>
